--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,6 @@
 	"initial": [
 		"libs/modules/egret/egret.js",
 		"libs/modules/egret/egret.web.js",
-		"libs/modules/eui/eui.js",
 		"libs/modules/assetsmanager/assetsmanager.js",
 		"libs/modules/dragonBones/dragonBones.js",
 		"libs/modules/game/game.js",
@@ -12,10 +11,8 @@
 		"libs/modules_ex/rawinflate/rawinflate.js"
 	],
 	"game": [
-		"bin-debug/AssetAdapter.js",
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
-		"bin-debug/ResourceLoader.js",
-		"bin-debug/ThemeAdapter.js"
+		"bin-debug/ResourceLoader.js"
 	]
 }
