--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,10 @@
 	"game": [
 		"bin-debug/Character.js",
 		"bin-debug/Main.js",
+		"bin-debug/PangGlobal.js",
 		"bin-debug/Platform.js",
 		"bin-debug/ResourceLoader.js",
+		"bin-debug/SceneManager.js",
 		"bin-debug/Stage.js"
 	]
 }
