--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
 		"bin-debug/Platform.js",
 		"bin-debug/ResourceLoader.js",
 		"bin-debug/SceneManager.js",
-		"bin-debug/Stage.js"
+		"bin-debug/Stage.js",
+		"bin-debug/UI.js"
 	]
 }
